--- a/src/main/resources/templates/Display.html
+++ b/src/main/resources/templates/Display.html
@@ -10,6 +10,8 @@
             margin:0;
             padding:20px;
             font-family: sans-serif;
+            /*background-image: url(image/cup-coffee-with-pile-coffee-beans.jpg) ;*/
+            background: #71412a;
         }
 
         *{
@@ -29,7 +31,8 @@
         }
 
         .table th{
-            background-color: darkblue;
+            background-color: black;
+            /*background: url(image/cup-coffee-with-pile-coffee-beans2.jpg) no-repeat;*/
             color:#ffffff;
         }
 
@@ -82,7 +85,7 @@
 <table class="table">
     <thead>
     <tr>
-        <th>Product_Id</th>
+        <th>Product_N0</th>
         <th>Product_Name</th>
         <th>Quantity</th>
         <th>Serial_No</th>
