--- a/src/main/resources/templates/login_page.html
+++ b/src/main/resources/templates/login_page.html
@@ -257,7 +257,7 @@
 
       <div class="input-box">
         <span class="icon"><ion-icon name="lock-closed"></ion-icon></span>
-        <input type="text"  name="password"required/></br>
+        <input type="password"  name="password"required/></br>
         <label>Password</label>
       </div>
 
