--- a/src/main/resources/templates/registration_page.html
+++ b/src/main/resources/templates/registration_page.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="../static/style.css">
-    <title>registartion-page</title>
+    <title>registration-page</title>
     <style>
 
         * {
@@ -233,8 +233,8 @@
 
     <!-- <section class="home">-->
     <div class="content">
-        <h2>Coffee Build Your Mind</h2>
-        <p>I was taken by the power that savoring a simple cup of coffee can have to connect people and create community</p>
+        <h2>Coffee Builds Your Mind</h2>
+        <p>I was taken by the power that savoring a simple cup of coffee can have to connect people and create a community</p>
         <a href="#">Get Started</a>
 
     </div>
@@ -257,7 +257,7 @@
 
             <div class="input-box">
                 <span class="icon"><ion-icon name="lock-closed"></ion-icon></span>
-                <input type="text"  name="password"required/></br>
+                <input type="password"  name="password"required/></br>
                 <label>Password</label>
             </div>
 
