--- a/src/main/resources/templates/product_page.html
+++ b/src/main/resources/templates/product_page.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>[[${RegistrationPage}]]</title>
+    <title>RegistrationPage</title>
     <link rel="stylesheet" href="../static/style.css">
     <style>
 
@@ -267,14 +267,9 @@
                 <label>Quantity</label>
             </div>
 
-            <div class="remember-forgot">
-                <label><input type="checkbox">Remember me</label>
-                <a href="#">Forgot Password?</a>
-            </div>
-            <button type="submit" class="btn">Sign_up</button>
-            <div class="register-link">
-                <p>Not a Member? <a href="#">Sign_Up now</a> </p>
-            </div>
+
+            <button type="submit" class="btn">Register</button>
+
 
 
         </form>
